After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779255 - general: fix empty view
general: fix empty view
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-26 13:58 UTC by Ernestas Kulik
Modified: 2017-02-27 14:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
general: fix empty view (6.48 KB, patch)
2017-02-26 14:01 UTC, Ernestas Kulik
none Details | Review
general: remove empty view (14.47 KB, patch)
2017-02-27 14:03 UTC, Ernestas Kulik
committed Details | Review

Description Ernestas Kulik 2017-02-26 13:58:52 UTC
The empty view is rarely built, so some changes have broken it. Since
the binary split, the tests don’t link, because the sources were being
added to the nautilus binary, instead of libnautilus. Some incompatible
code changes were made as well. This commit fixes the issues, causing
failing builds and enables building the empty view with Meson as well.
Comment 1 Ernestas Kulik 2017-02-26 14:01:11 UTC
Created attachment 346755 [details] [review]
general: fix empty view
Comment 2 Carlos Soriano 2017-02-27 13:01:13 UTC
Review of attachment 346755 [details] [review]:

As we said on IRC... I think we should remove the empty view, so rejecting :(
Comment 3 Ernestas Kulik 2017-02-27 14:03:44 UTC
Created attachment 346819 [details] [review]
general: remove empty view

Since testing is planned to be done with actual views and no one has
built Nautilus with the empty view enabled recently, it is safe to say
that it should go. This commit removes the empty view.
Comment 4 Carlos Soriano 2017-02-27 14:16:18 UTC
Review of attachment 346819 [details] [review]:

yeah, LGTM
Comment 5 Ernestas Kulik 2017-02-27 14:48:26 UTC
Attachment 346819 [details] pushed as ec92b8a - general: remove empty view