general: remove empty view

Since testing is planned to be done with actual views and no one has
built Nautilus with the empty view enabled recently, it is safe to say
that it should go. This commit removes the empty view.

https://bugzilla.gnome.org/show_bug.cgi?id=779255